<resources>
        <string name="text_ack_msg">已讀</string>
    <string name="text_delivered_msg">送達</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住說話</string>
    <string name="button_send">發送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">圖片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">視頻</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">語音電話</string>
    <string name="attach_video_call">視頻通話</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消發送</string>
    <string name="release_to_cancel">松開手指，取消發送</string>
    <string name="send_fail">發送消息失敗,</string>
    <string name="delete_message">刪除消息</string>
    <string name="delete_conversation_messages">刪除會話和消息</string>
    <string name="delete_conversation">刪除會話</string>
    <string name="copy_message">復制消息</string>
    <string name="delete_voice">刪除語音</string>
    <string name="delete_video">刪除視頻</string>
    <string name="delete">刪除</string>
    <string name="resend">重發</string>
    <string name="confirm_resend">確認重發該信息？</string>
    <string name="connect_failuer_toast">請檢查網酪或稍候重試</string>
    <string name="network_unavailable">網酪連接不可用，請檢查網酪</string>
    <string name="copy">復制</string>
    <string name="forward">轉發</string>
    <string name="button_logout">登出</string>
    <string name="button_uploadlog">上傳運行日誌</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空記錄</string>
    <string name="clear_all_records">是否清空所有聊天記錄？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">錄制視頻</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[圖片]</string>
    <string name="video">[視頻]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[語音通話]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">網酪不可用</string>
    <string name="recoding_fail">錄音失敗，請重試！</string>
    <string name="select_contacts">選擇聯系人</string>
    <string name="confirm_forward_to">確定轉發到：%1$s ?</string>
    <string name="logout">退出登錄</string>
    <string name="logout_hint">退出後不會刪除任何歷史數據，下次登錄依然可以使用本帳號</string>
    <string name="exit_group_hint">退出後，將不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出後，此群將被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同壹帳號已在其他設備登錄</string>
    <string name="em_user_remove">此用護已被移除</string>
    <string name="set">設置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">聲音</string>
    <string name="shake">震動</string>
    <string name="chatset">聊天設置</string>
    <string name="yangshengqi">使用揚聲器播放語音</string>
    <string name="book_black">通訊錄黑名單</string>
    <string name="session">會話</string>
    <string name="address_book">通訊錄</string>
    <string name="setting">設置</string>
    <string name="now_refresh_list">正在刷新聯系人</string>
    <string name="Application_and_notify">申請與通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">設置此昵稱以後，在與iOS客護端demo聊天過程中，iOS壹側會顯示此昵稱而不是環信ID，如果對方使用安卓客護端則此設置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名單</string>
    <string name="diagnose">診斷</string>
    <string name="push_nick">iOS離線推送昵稱</string>
    <string name="Current_version">當前版本</string>
    <string name="Not_Set">未設置</string>
    <string name="Upload_the_log">上傳日誌中</string>
    <string name="The_new_group_chat">新建群組</string>
    <string name="add_public_group_chat">添加公開群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名稱</string>
    <string name="Group_chat_profile">群聊間介</string>
    <string name="Whether_the_public">是否公開</string>
    <string name="Open_group_members_invited">開放群成員邀請</string>
    <string name="Open_group_chat">公開的群聊</string>
    <string name="blacklist">黑名單列表</string>
    <string name="Empty_the_chat_record">清空聊天記錄</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">選擇聯系人</string>
    <string name="Group_chat_information">群聊資料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">間介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="login">登錄</string>
    <string name="user_name">用護名</string>
    <string name="password">密碼</string>
    <string name="register">註冊</string>
    <string name="confirmpassword">確認密碼</string>
    <string name="downwaiting">正在下載文件請稍後</string>
    <string name="mute">靜音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">掛斷</string>
    <string name="answer">接聽</string>
    <string name="unable_to_connect">不能連接到服務器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">群聊:</string>
    <string name="not_download">未下載:</string>
	<string name="Please_enter_a_username">請輸入用護名</string>
    <string name="is_down_please_wait">正在下載視頻請稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用護已是妳的好友</string>
    <string name="Add_a_friend">加個好友唄</string>
    <string name="send_successful">發送請求成功,等待對方驗證</string>
    <string name="Request_add_buddy_failure">請求添加好友失敗:</string>
    <string name="Network_error">網酪出錯</string>
    <string name="Making_sure_your_location">正在確定妳的位置...</string>
    <string name="please_check">key 驗證出錯! 請在 AndroidManifest.xml 文件中檢查 key 設置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失敗</string>
    <string name="be_removing">正在移出...</string>
    <string name="call_duration">通話時長</string>
    <string name="Refused">已拒絕</string>
    <string name="The_other_party_has_refused_to">對方已拒絕</string>
    <string name="The_other_is_not_online">對方不在線</string>
    <string name="The_other_is_on_the_phone">對方正在通話中</string>
    <string name="The_other_party_did_not_answer">對方未接聽</string>
    <string name="did_not_answer">未接聽</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="unable_to_get_loaction">無法獲取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未連接至服務器，請稍後重試</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到圖片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大於10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天記錄</string>
    <string name="Send_voice_need_sdcard_support">發送語音需要sdcard支持</string>
    <string name="Recording_without_permission">無錄音權限</string>
    <string name="The_recording_time_is_too_short">錄音時間太短</string>
    <string name="send_failure_please">發送失敗，請檢測服務器是否連接</string>
    <string name="Move_into_blacklist_success">移入黑名單成功</string>
    <string name="Move_into_blacklist_failure">移入黑名單失敗</string>
    <string name="you_are_group">妳被群創建者從此群中移除</string>
    <string name="the_current_group">當前群聊已被群創建者解散</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="deleting">正在刪除...</string>
    <string name="Delete_failed">刪除失敗:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名單...</string>
    <string name="Log_uploaded_successfully">日誌上傳成功</string>
    <string name="Log_Upload_failed">log上傳失敗</string>
    <string name="get_failed_please_check">獲取失敗,請檢查網酪或稍後再試</string>
    <string name="people">人)</string>
    <string name="being_added">正在添加...</string>
    <string name="is_quit_the_group_chat">正在退出群聊...</string>
    <string name="chatting_is_dissolution">正在解散群聊...</string>
    <string name="are_empty_group_of_news">正在清空群消息...</string>
    <string name="is_modify_the_group_name">正在修改群名稱...</string>
    <string name="Modify_the_group_name_successful">修改群名稱成功</string>
    <string name="change_the_group_name_failed_please">改變群名稱失敗，請檢查網酪或稍後重試</string>
    <string name="Are_moving_to_blacklist">正在移入至黑名單</string>
    <string name="failed_to_move_into">移入黑名單失敗,請檢查網酪或稍後重試</string>
    <string name="Exit_the_group_chat_failure">退出群聊失敗:</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失敗:</string>
    <string name="Add_group_members_fail">添加群成員失敗:</string>
    <string name="Is_unblock">正在解除屏蔽...</string>
    <string name="remove_group_of">解除群屏蔽失敗，請檢查網酪或稍後重試</string>
    <string name="group_is_blocked">正在屏蔽群組...</string>
    <string name="group_of_shielding">群屏蔽失敗，請檢查網酪或稍後重試</string>
    <string name="sure_to_empty_this">確定清空此群的聊天記錄嗎？</string>
    <string name="The_delete_button_is_clicked">刪除按鈕被點擊</string>
    <string name="Add_a_button_was_clicked">添加按鈕被點擊</string>
    <string name="not_delete_myself">不能刪除自己</string>
    <string name="Are_removed">正在移除...</string>
    <string name="confirm_the_members">確認將此成員加入至此群黑名單?</string>
    <string name="Failed_to_get_group_chat_information">獲取群聊信息失敗:</string>
    <string name="Is_sending_a_request">正在發送請求...</string>
    <string name="Request_to_join">請求加入</string>
    <string name="send_the_request_is">發送請求成功，等待群主同意</string>
    <string name="Join_the_group_chat">加入群聊成功</string>
    <string name="Failed_to_join_the_group_chat">加入群聊失敗:</string>
    <string name="temporary_does_not">暫不支持大於10M的視頻！</string>
    <string name="Video_footage">拍攝錄像</string>
    <string name="User_name_cannot_be_empty">用護名不能為空！</string>
    <string name="Password_cannot_be_empty">密碼不能為空！</string>
    <string name="please_set_the_current">設置當前用護的昵稱\n用於ios離線推送時顯示用護昵稱</string>
    <string name="Is_landing">正在登錄...</string>
    <string name="list_is_for">將在後臺獲取好友和群聊列表...</string>
    <string name="login_failure_failed">登錄失敗: 獲取好友或群聊失敗</string>
    <string name="Login_failed">登錄失敗:</string>
    <string name="receive_the_passthrough">收到透傳：action：</string>
    <string name="have_you_removed">已把妳從他好友列表裏移除</string>
    <string name="CCmb1">首頁</string>
    <string name="CCmb2">分類</string>
    <string name="CCmb3">展會</string>
        <string name="CCmb4">我的帳戶</string>
        <string name="CCmb5">更多</string>
     <string name="aa1">商   戶</string>
     <string name="aa2">供 應 商</string>
<string name="abc43">公司名稱</string>
<string name="abc65">推薦</string>
<string name="abc66">XXXXXXXXXXXXX免費搶</string>
<string name="abc67">2015-8-15至2015-8-31</string>
<string name="abc45b1">所屬國家</string>
          <string name="za3">登記</string>
          <string name="za7">以社交網酪登入</string>
          <string name="aaz1">登入電郵</string>
          <string name="aaz2">用作登入及接收確認電郵</string>
          <string name="aaz3">稱謂</string>
          <string name="aaz4">請選擇</string>
          <string name="aaz7">姓名</string>
          <string name="aaz8">必須確認</string>
          <string name="aaz9">密碼</string>
          <string name="aaz99">確認密碼</string>
          <string name="aaz11">6至20個字符</string>
          <string name="aaz13">請選擇</string>
          <string name="aaz16">----------------------------------------------------------------------------</string>
  <string name="aaaz13">行業分類</string>
  <string name="aaaz13aa">壹級行業</string>
    <string name="aaaz13b">二級行業</string>
    <string name="aaaz13a">會員分類</string>
<string name="ds1">詳情>></string>
</resources>