<RelativeLayout 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      
    >
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myradio2"
 >
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz1"
         />
                  <com.llew.e.clear.view.wedgit.ClearEditText 
                      android:drawableRight="@drawable/clear_normal_list"
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         
         android:id="@+id/mEtfr1"
         android:textColor="@color/black"
         
         
         android:layout_height="wrap_content"
         android:hint="@string/aaz2"
         />
 </LinearLayout>
 <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
    <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:visibility="gone"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz3"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:id="@+id/mTvreg1"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz4"
         />
 </LinearLayout>
  <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/abc43"
         />
                  <com.llew.e.clear.view.wedgit.ClearEditText 
                      android:drawableRight="@drawable/clear_normal_list"
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         
         android:layout_gravity="center_vertical"
                  android:textColor="@color/black"
         
                  android:id="@+id/mEtfr2"     
         android:layout_height="wrap_content"
         />
 </LinearLayout>  
    <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
    <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz7"
         />
                  <com.llew.e.clear.view.wedgit.ClearEditText 
                      android:drawableRight="@drawable/clear_normal_list"
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
         
                  android:id="@+id/mEtfr3"
         android:layout_height="wrap_content"
         android:hint="@string/aaz8"
                  android:textColor="@color/black"
         
         />
 </LinearLayout>
     <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz9"
         />
                  <com.llew.e.clear.view.wedgit.ClearEditText 
                      android:drawableRight="@drawable/clear_normal_list"
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
                  android:id="@+id/mEtfr4"
                  android:textColor="@color/black"
         android:inputType="textPassword"
         android:layout_height="wrap_content"
         android:hint="@string/aaz11"
         />
 </LinearLayout>
          <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz99"
         />
                  <com.llew.e.clear.view.wedgit.ClearEditText 
                      android:drawableRight="@drawable/clear_normal_list"
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:textSize="13sp"
                  android:id="@+id/mEtfr44"
                  android:textColor="@color/black"
         android:inputType="textPassword"
         android:layout_height="wrap_content"
         android:hint="@string/aaz11"
         />
 </LinearLayout>
          <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:visibility="gone"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaaz13"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:id="@+id/mTvreg2"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz13"
         />
 </LinearLayout>
     <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaaz13aa"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:id="@+id/mTvreg24"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz13"
         />
 </LinearLayout> <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaaz13b"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:id="@+id/mTvreg24b"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz13"
         />
 </LinearLayout>
   <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
    <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaaz13a"
         />
     <RadioGroup 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:gravity="right"
         android:id="@+id/mRg1"
         android:layout_height="wrap_content"
        android:orientation="horizontal"
         >
         <RadioButton 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:id="@+id/mRb1"
             android:layout_height="wrap_content"
             android:text="@string/aa1"
             />
         <RadioButton 
             android:layout_width="0dp"
             android:layout_weight="1"
                          android:id="@+id/mRb2"
             
             android:layout_height="wrap_content"
             android:text="@string/aa2"
             />
         </RadioGroup>
 </LinearLayout>
   <View 
     android:layout_width="fill_parent"
     android:layout_height="0.5dp"
     android:background="@color/black"
     />
        <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:background="@color/aliceblue"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="@color/black"
         
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/abc45b1"
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="2.5"
         android:layout_height="wrap_content"
          android:gravity="right"
         android:textSize="13sp"
         android:id="@+id/mTvreg244"
         android:paddingRight="20dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginLeft="4dp"
         android:text="@string/aaz13"
         />
 </LinearLayout>
            <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     >
          <Button 
                    android:layout_width="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="40dp"
                    android:text="@string/za3"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                   android:layout_below="@id/mLL1"
                    android:id="@+id/ui_login_btn"
                    android:background="@drawable/ad15"
                    />
 </RelativeLayout>
                  <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     >
          <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="13sp"
         android:gravity="center"
         android:layout_margin="5dp"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:text=""
         android:id="@+id/mTvr21"
         />
 </RelativeLayout>
                  <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="20dp"
   android:layout_marginLeft="5dp"
   android:layout_marginRight="5dp"
                      android:visibility="gone"
   
     >
          <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:layout_gravity="center"
         android:text="@string/aaz16"
         />
 </RelativeLayout>
                            <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="13sp"
         android:textColor="@color/black"
                            android:visibility="gone"
         
         android:gravity="center"
         android:text="@string/za7"
         />
                  
      
</LinearLayout>
</ScrollView>
            <ProgressBar
            android:id="@+id/progressBar_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

</RelativeLayout>
