<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_height="wrap_content" >
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abc65"
        android:textColor="@color/my6"
        android:padding="4dp"
        android:id="@+id/mTvi1"
        android:background="@color/yellow"
        />
        <TextView 
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/mTvi1"
        android:layout_height="wrap_content"
        android:text="@string/abc66"
        android:textSize="23sp"
        android:id="@+id/mTvi2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="100dp"
        android:textColor="@color/my1"
        />
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abc67"
        android:textSize="18sp"
        android:id="@+id/mTvi3"
        android:layout_below="@id/mTvi2"
        android:textColor="@color/lightgray"
        />
                <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ds1"
        android:textSize="16sp"
        android:id="@+id/mTvi4"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:textColor="@color/my1"
        />
        
                <ImageView 
                    android:layout_below="@id/mTvi3"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:scaleType="fitXY"
                    android:id="@+id/mIvw1"
                    android:src="@drawable/abd62"
                    />
        
</RelativeLayout>
   
</RelativeLayout>